--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,6 @@ figcaption {
 /* ID selector (apply to one unique element per page) */
 
 #logo { /* select elements with id="logo" */
-  background: aqua;
 }
 
 /* Descendent Selector */
@@ -69,4 +68,84 @@ figcaption {
 
 #details a:active {
   color: red;
+}
+
+*{
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+}
+/*/////Layout/////*/
+
+.wrapper{
+  width: 960px;
+  margin: 0 auto;
+
+}
+
+.col1{
+  float: left;
+  width: 32%;
+}
+
+.col2{
+  float: left;
+  width: 66%;
+}
+
+.col3{
+  background: #ccc  ;
+}
+
+.clearFix::after{
+  content: '.';
+  clear: both;
+  visibility: hidden;
+  height: 0;
+  line-height: 0;
+  display: block;
+}
+
+[class*=col]{
+  margin-left: 2%;
+}
+.first{
+  margin-left: 0;
+}
+
+/*/////media/////*/
+img,video,audio{
+  max-width: 100%;
+}
+
+/*/////Sections/////*/
+
+header{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: #fff;
+}
+
+section{
+  margin-bottom:20px ;
+  padding: 20px;
+}
+
+/*/////Social/////*/
+
+#social{
+  position: fixed;
+  top: 200px;
+  right: 20px;
+  width: 40px;
+  z-index: 1;
+}
+
+#social a{
+  display: block;
+  width: 40px;
+  height: 40px;
+  background-color: rgb(184, 107, 107);
 }
