--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
-  
-@import url(http://fonts.googleapis.com/css?family=Elsie+Swash+Caps:400,900);
+@import url(http://fonts.googleapis.com/css?family=Elsie+Swash+Caps:400, 900);
 @import url(http://fonts.googleapis.com/css?family=Clicker+Script);
 
 /* This 
@@ -15,7 +14,8 @@ selector {
 
 /* Type selector */
 
-p { /* select all <p> */
+p {
+  /* select all <p> */
   font-size: 1em; /* 16px, ?pt, 100%, 1em */
   line-height: 1.5em;
 }
@@ -25,38 +25,41 @@ figcaption {
   font-size: 0.75em;
   line-height: 1.5em;
   font-family: Georgia, "New Times Roman", serif;*/
-  font: normal 0.75em/1.5em 'Elsie Swash Caps', cursive;
+  font: normal 0.75em/1.5em "Elsie Swash Caps", cursive;
   color: #777;
   text-align: right;
 }
 
 /* Class selector (applied to as many elements as you like) */
 
-.milk-text { /* select elements with class="milk-text" */
-  font: bold 2.6em 'Elsie Swash Caps', cursive;
+.milk-text {
+  /* select elements with class="milk-text" */
+  font: bold 2.6em "Elsie Swash Caps", cursive;
   color: white;
   text-shadow: 0 2px 3px #000;
 }
 
 /* ID selector (apply to one unique element per page) */
 
-/* #logo { select elements with id="logo" 
-    background: aqua; */
+#logo {
+  /* select elements with id="logo" */
 }
 
-/* Descendant Selector */
+/* Descendent Selector */
 
-#logo h1 { /* selects <h1> if inside the id="logo" */
-  font-family: 'Clicker Script', cursive;
+#logo h1 {
+  /* selects <h1> if inside the id="logo" */
+  font-family: "Clicker Script", cursive;
 }
 
 #logo h2 {
-  font-family: 'Elsie Swash Caps', cursive;
+  font-family: "Elsie Swash Caps", cursive;
 }
 
 /* Psuedo Selector */
 
-#details a:link, #details a:visited {
+#details a:link,
+#details a:visited {
   color: black;
   text-decoration: none;
 }
@@ -70,44 +73,46 @@ figcaption {
   color: red;
 }
 
-/*///////MEdIA\\\\\\\\*/
+/*////// MEDIA //////*/
 
-img, video, audio {
+img,
+video,
+audio {
   max-width: 100%;
 }
 
-/*///////LAYoUT\\\\\\\\*/
+/*////// LAYOUT //////*/
 
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
+
 .wrapper {
   width: 960px;
   margin: 0 auto;
- }
+}
 
-
- .col-1 {
+.col-1 {
   float: left;
   width: 32%;
   background: #ccc;
- }
+}
 
-
- .col-2 {
+.col-2 {
   float: left;
   width: 66%;
   background: #ccc;
 }
 
-
 .col-3 {
   background: #ccc;
-
 }
 
+[class*="col-"] {
+  margin: 2%;
+}
 
 .clearfix:after {
   content: ".";
@@ -116,51 +121,35 @@ img, video, audio {
   visibility: hidden;
   height: 0;
   line-height: 0;
-
-}
-
-[class*="col-"] {
-  margin-left: 2%;
 }
 
 .first {
-  margin-left: 0%;
+  margin: 0%;
 }
-/*///////SECtIONS\\\\\\\\*/
+/*////// SECTIONS //////*/
 
-  header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background: #fff;
-    z-index: 1;
-  }
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: #fff;
+  z-index: 1;
+}
 
-  section {
-    padding: 20px;
-    margin-bottom: 20px;
-  }
+section {
+  padding: 20px;
+  margin-bottom: 20px;
+}
 
-footer {
-    position: relative;
-    width: 100%;
-    float: left;
-    margin: auto; 
-    
-  }
+/*////// SOCIAL //////*/
 
-
-
-
-  /*///////SOCiAL\\\\\\\\*/
-
-  #social {
-    position: fixed;
-    top: 200px;
-    right: 20px;
-    width: 40px;
-    z-index: 1; 
+#social {
+  position: fixed;
+  top: 200px;
+  right: 20px;
+  width: 40px;
+  z-index: 1;
 }
 
 #social a {
