--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,12 @@ p { /* select all <p> */
   line-height: 1.5em;
 }
 
+* {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+}
+
 figcaption {
   /*font-weight: normal;
   font-size: 0.75em;
@@ -69,4 +75,68 @@ figcaption {
 
 #details a:active {
   color: red;
+}
+.wrapper {
+  width: 960px;
+  margin: 0 auto;
+  background-color: #eee;
+}
+
+.col-1 {
+  float: left;
+  width: 32%;
+  background: #ccc;
+}
+
+.col-2 {
+  float: left;
+  width: 66%;
+  background: #ccc;
+}
+
+.col-3 {
+ background: #ccc;
+}
+
+[class*="col-"] {
+margin-left:2%
+}
+
+.first {
+  margin-left:0%
+}
+
+.clearfix:after {
+  content: ".";
+  display: block;
+  clear:both;
+  visibility: hidden;
+  height: 0;
+  line-height: 0;
+}
+
+img, video, audio {
+  max-width: 100%;
+}
+
+
+section {
+  margin-bottom: 20px;
+  padding: 20px;
+}
+
+
+#social {
+  position: fixed;
+  top: 200px;
+  right: 200px;
+  width:40px;
+  z-index: 1;
+}
+
+#social a {
+  display: block;
+  width: 40px;
+  height: 40px;
+  background: yellow;
 }
