--- a/css/style.css
+++ b/css/style.css
@@ -70,3 +70,69 @@ figcaption {
 #details a:active {
   color: red;
 }
+.wrapper{
+  width: 960px;
+  margin: 0 auto;
+  background-color: #eee;
+}
+
+.col-1{
+float: left;
+width: 32%;
+background: #ccc;
+}
+.col-2{
+  float: left;
+  width: 66%;
+  background: #ccc;
+}
+.col-3{
+background: #ccc;
+}
+
+[class*="col-"]{
+  margin-left:2%;
+}
+.first{
+  margin-left: 0%;
+}
+.clearfix:after{
+content:".";
+display: block;
+clear:both;
+visibility: hidden;
+line-height: 0;
+height: 0;
+}
+img, video, audio{
+  max-width: 100%;
+}
+section{
+  padding: 20px;
+  margin-bottom: 20px;
+}
+*{
+  box-sizing: border-box;
+}
+
+#social{
+  position: fixed;
+  top:200px;
+  right: 20px;
+  width: 40px;
+  z-index: 1;
+}
+#social a{
+  display: block;
+  width: 40px;
+  height: 40px;
+  background: yellow;
+}
+header{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: #fff;
+  z-index:1;
+}
