--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,6 @@ figcaption {
 /* ID selector (apply to one unique element per page) */
 
 #logo { /* select elements with id="logo" */
-  background: aqua;
 }
 
 /* Descendent Selector */
@@ -69,4 +68,85 @@ figcaption {
 
 #details a:active {
   color: red;
+}
+
+/*/////// MEDIA ///////*/
+img, video, audio{
+  width: 100%;
+}
+
+/*/////// LAYOUT ///////*/
+
+*{
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.wrapper{
+  width: 960px;
+  margin: 0 auto;
+}
+
+.col-1{
+  width: 32%;
+  float: left;
+}
+
+.col-2{
+  width: 66%;
+  float: left;
+}
+
+ .col-3{
+ }
+
+ [class*="col-"]{
+   margin-left: 2%;
+ }
+
+ .first{
+   margin-left: 0%;
+ }
+
+.clearfix:after{
+  content: ".";
+  clear: both;
+  display: block;
+  visibility: hidden;
+  line-height: 0;
+  height: 0;
+}
+
+/*/////// SECTION ///////*/
+
+header{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #fff;
+  z-index: 1;
+}
+
+section{
+  margin-bottom: 20px;
+  padding: 20px;
+}
+
+/*/////// SOCIAL ///////*/
+
+#social{
+  right: 40px;
+  top: 200px;
+  position: fixed;
+  width: 40px;
+  z-index: 1;
+}
+
+#social a{
+  display: block;
+  width: 40px;
+  height: 40px;
+  background-color: yellow;
 }
