--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,9 @@
 @import url(http://fonts.googleapis.com/css?family=Elsie+Swash+Caps:400,900);
 @import url(http://fonts.googleapis.com/css?family=Clicker+Script);
 
-/* This 
-is 
+/* This
+is
 a comment! */
-
 /* CSS Syntax:
 
 selector {
@@ -13,11 +12,11 @@ selector {
 }
 
 */
-
 /* Type selector */
-
-p { /* select all <p> */
-  font-size: 1em; /* 16px, ?pt, 100%, 1em */
+p {
+  /* select all <p> */
+  font-size: 1em;
+  /* 16px, ?pt, 100%, 1em */
   line-height: 1.5em;
 }
 
@@ -32,22 +31,22 @@ figcaption {
 }
 
 /* Class selector (applied to as many elements as you like) */
-
-.milk-text { /* select elements with class="milk-text" */
+.milk-text {
+  /* select elements with class="milk-text" */
   font: bold 2.6em 'Elsie Swash Caps', cursive;
   color: white;
   text-shadow: 0 2px 3px #000;
 }
 
 /* ID selector (apply to one unique element per page) */
+#logo {
+  /* select elements with id="logo" */
 
-#logo { /* select elements with id="logo" */
-  background: aqua;
 }
 
 /* Descendent Selector */
-
-#logo h1 { /* selects <h1> if inside the id="logo" */
+#logo h1 {
+  /* selects <h1> if inside the id="logo" */
   font-family: 'Clicker Script', cursive;
 }
 
@@ -56,7 +55,6 @@ figcaption {
 }
 
 /* Psuedo Selector */
-
 #details a:link, #details a:visited {
   color: black;
   text-decoration: none;
@@ -69,4 +67,80 @@ figcaption {
 
 #details a:active {
   color: red;
+}
+
+#social {
+  position: fixed;
+  top: 200px;
+  right: 20px;
+  width: 40px;
+  z-index: 1;
+}
+
+#social a {
+  display: block;
+  width: 40px;
+  height: 40px;
+  background: yellow;
+}
+header{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: #fff;
+  z-index: 1;
+
+}
+
+img, video, audio {
+  max-width: 100%;
+}
+
+.wrapper {
+  width: 960px;
+  margin: 0 auto;
+}
+
+.clearfix:after {
+  content: ".";
+  display: block;
+  clear: both;
+  visibility: hidden;
+  height: 0;
+  line-height: 0;
+}
+
+.col-1 {
+  float: left;
+  background: #ccc;
+  width: 32%;
+}
+
+.col-2 {
+  float: left;
+  background: #ccc;
+  width: 66%;
+}
+
+.col-3 {
+  background: #ccc;
+}
+
+[class*="col-"] {
+  margin-left: 2%;
+}
+
+.first {
+  margin-left: 0%;
+}
+
+* {
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+section {
+  margin-bottom: 20px;
+  padding: 20px;
 }
