--- a/css/style.css
+++ b/css/style.css
@@ -6,19 +6,22 @@ is
 a comment! */
 
 /* CSS Syntax:
-
 selector {
   property: value;
   property: value;
 }
-
 */
 
 /* Type selector */
-
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 p { /* select all <p> */
   font-size: 1em; /* 16px, ?pt, 100%, 1em */
   line-height: 1.5em;
+  
 }
 
 figcaption {
@@ -69,4 +72,56 @@ figcaption {
 
 #details a:active {
   color: red;
+}
+
+header {
+  width: 90vw;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+}
+
+div#logo, nav {
+  text-align: center;
+  margin-bottom: 10px;
+}
+nav a {
+  padding-right: 15px;
+}
+#featured-property {
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+#featured-property p {
+  width: 75%;
+  margin-bottom: 15px;
+}
+
+#promotional{
+  width: 90vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#promotional video {
+  width: 100%;
+}
+#details {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+#details h3 {
+  padding-bottom: 10px;
+}
+
+#details p {
+  margin-bottom: 10px;
+}
+footer {
+  width: 100vw;
+  margin: 20px auto;
 }
